# Re-X-WorkingMate-

project/main/: CMakeLists.txt  face_detect_wrapper.cpp  face_detect_wrapper.h  idf_component.yml  main.c
project/sandbox/src/: App.tsx
中景园ZJY128P20CTG01技术资料/01-规格书与芯片手册/01-�������оƬ�ֲ�/: ZJY128P20CTG01.dwg
中景园ZJY128P20CTG01技术资料/03-程序源码/03-����Դ��/01-1.28IPS��ʾ��STM32F103ZET6_CTP����/HARDWARE/CST816S/: CST816S.c  CTIIC.c
中景园ZJY128P20CTG01技术资料/03-程序源码/03-����Դ��/01-1.28IPS��ʾ��STM32F103ZET6_CTP����/HARDWARE/LCD/: lcd_init.c  lcd_init.h
中景园ZJY128P20CTG01技术资料/03-程序源码/03-����Դ��/01-1.28IPS��ʾ��STM32F103ZET6_CTP����/USER/: JLinkLog.txt  LCD.uvguix.80685  LCD.uvguix.Administrator  LCD.uvoptx  LCD.uvprojx  main.c
中景园ZJY128P20CTG01技术资料/03-程序源码/03-����Դ��/01-1.28IPS��ʾ��STM32F103ZET6_CTP����/USER/Listings/: LCD.map  startup_stm32f10x_hd.lst
中景园ZJY128P20CTG01技术资料/03-程序源码/03-����Դ��/02-1.28IPS��ʾ��STM32F407ZG_CTP����/HARDWARE/CST816S/: CST816S.h  CTIIC.c  CTIIC.h
中景园ZJY128P20CTG01技术资料/03-程序源码/03-����Դ��/02-1.28IPS��ʾ��STM32F407ZG_CTP����/HARDWARE/LCD/: lcd_init.c  lcd_init.h
中景园ZJY128P20CTG01技术资料/03-程序源码/03-����Դ��/02-1.28IPS��ʾ��STM32F407ZG_CTP����/USER/: JLinkLog.txt  LCD.uvguix.Administrator  LCD.uvoptx  LCD.uvprojx  main.c
